tests/machine/x/kotlin/exists_builtin.error
line 63:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/exists_builtin.kt:63:12: error: unresolved reference: exists
val flag = exists(run {
           ^

 62: 
 63: val flag = exists(run {
 64:     val __res = mutableListOf<Any>()
